--- a/.github/workflows_backup/release_linux_musl_arm.yml
+++ b/.github/workflows_backup/release_linux_musl_arm.yml
@@ -4,6 +4,9 @@ on:
   release:
     types: [ published ]
 
+permissions:
+  contents: write
+
 jobs:
   release_linux_musl_arm:
     strategy:
@@ -29,6 +32,7 @@ jobs:
           bash build.sh release linux_musl_arm
 
       - name: Upload assets
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v2.0.4
         with:
           files: build/compress/*
+
